crates/auryn-compiler/tests/snapshots/diagnostic_tests__ui@generic_function_impossible_inference_2.au.snap
---
source: crates/auryn-compiler/tests/diagnostic_tests.rs
expression: "fn main() {\n\tlet a: []String = std.arrayOfZeros(0)\n\tlet b: []Bool= std.arrayOfZeros(0)\n\tfoo(a, b)\n}\n\nfn foo[T](first: []T, second: []T) {\n\tstd.print(first)\n\tstd.print(second)\n}\n"
input_file: crates/auryn-compiler/tests/inputs/diagnostics/generic_function_impossible_inference_2.au
---
Error: Type mismatch
   ╭─[ main:4:9 ]
   │
 4 │     foo(a, b)
   │            ┬  
   │            ╰── Expected `[]String`, but got `[]Bool`
───╯

Error: Mismatched inferred generic type
   ╭─[ main:4:2 ]
   │
 4 │     foo(a, b)
   │     ────┬────  
   │         ╰────── Could not infer the generic type `T`
   │ 
 7 │ fn foo[T](first: []T, second: []T) {
   │        ┬  
   │        ╰── This argument was first inferred to `String`, but later inferred to `Bool`, which are not compatible
───╯
