crates/auryn-compiler/tests/snapshots/diagnostic_tests__ui@generic_function_mismatched_type.au.snap
---
source: crates/auryn-compiler/tests/diagnostic_tests.rs
expression: "fn main() {\n\tlet a: []String = std.arrayOfZeros(0)\n\tfoo(a, \"d\")\n}\n\nfn foo[T](first: []T, second: []T) {\n\tstd.print(first)\n\tstd.print(second)\n}\n\n"
input_file: crates/auryn-compiler/tests/inputs/diagnostics/generic_function_mismatched_type.au
---
Error: Type mismatch
   ╭─[ main:3:9 ]
   │
 3 │     foo(a, "d")
   │            ─┬─  
   │             ╰─── Expected `[]String`, but got `String`
───╯
