crates/auryn-compiler/tests/snapshots/diagnostic_tests__ui@inference_failure.au.snap
---
source: crates/auryn-compiler/tests/diagnostic_tests.rs
expression: "fn main() {\n\tlet a = std.arrayOfZeros(50)\n}\n"
input_file: crates/auryn-compiler/tests/inputs/diagnostics/inference_failure.au
---
Error: Non-inferred generic type argument
    ╭─[ main:2:10 ]
    │
  2 │     let a = std.arrayOfZeros(50)
    │             ──────────┬─────────  
    │                       ╰─────────── Could not infer the generic type argument `T`
    │
    ├─[ std:12:18 ]
    │
 12 │     fn arrayOfZeros[T](n: I32) -> []T
    │                     ┬  
    │                     ╰── The argument is defined here
────╯
